<resources>
    <string name="app_name">Introduce</string>
    <string name="signIn_pw_et">비밀번호를 입력하세요.</string>
    <string name="signIn_pw">비밀번호</string>
    <string name="signIn_id_et">아이디를 입력하세요.</string>
    <string name="signIn_id">아이디</string>
    <string name="signIn_login">로그인</string>
    <string name="signIn_signup">회원가입</string>
    <string name="home_age">나이 : 30</string>
    <string name="home_id">아이디 : </string>
    <string name="home_end">종료</string>
    <string name="home_name">이름 : 김기원</string>
    <string name="signUp_name">이름</string>
    <string name="signUp_id">아이디</string>
    <string name="signUp_pw">비밀번호</string>
    <string name="signUp_name_et">이름을 입력하세요.</string>
    <string name="signUp_id_et">아이디를 입력하세요.</string>
    <string name="signUp_pw_et">비밀번호를 입력하세요.</string>
    <string name="signUp_signup">회원가입</string>
    <string name="toast_msg_idpwerr">아이디/비밀번호를 확인해주세요.</string>
    <string name="toast_msg_checkinfo">입력되지 않은 정보가 있습니다.</string>
    <string name="home_mbti">MBTI : INTP</string>
</resources>